# AV_ANDROID

./: CMakeLists.txt  build.gradle
src/androidTest/java/com/flyscale/mp3encoder/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: Mp3Decoder.cpp  Mp3Encoder.cpp  accompany_decoder.cpp  accompany_decoder_controller.cpp  ffmpegmp3decoder.cpp  mp3_encoder.cpp  mp3decoder_controller.cpp
src/main/cpp/include/: accompany_decoder.h  com_flyscale_mp3encoder_Mp3Decoder.h  com_flyscale_mp3encoder_Mp3Encoder.h  ffmpegmp3decoder.h  mp3_encoder.h  mp3decoder_controller.h
src/main/java/com/flyscale/mp3encoder/: MainActivity.java  Mp3Decoder.java  Mp3Encoder.java
src/main/res/layout/: activity_main.xml
src/test/java/com/flyscale/mp3encoder/: ExampleUnitTest.java
